# TypingMaster

./: CMakeLists.txt  TypingLine.hpp  TypingMasterWindow.cpp  main.cpp  phrases.en
src/: CMakeLists.txt  Stopwatch.cpp  Stopwatch.hpp  TypingLine.cpp  TypingMasterWindow.cpp  TypingMasterWindow.hpp  TypingSource.cpp  TypingSource.hpp
tests/: CMakeLists.txt  TypingSourceTest.cpp
